force-app/main/default/objects/Product2/fields/Affichage_EMWH__c.field-meta.xml
<CustomField>
    <fullName>Affichage_EMWH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cochez cette case si ce produit doit être affiché sur le Web Hub</description>
    <inlineHelpText>Cochez cette case si ce produit doit être affiché sur le Web Hub</inlineHelpText>
    <label>Affichage EMWH</label>
    <type>Checkbox</type>
</CustomField>