force-app/main/default/objects/Product2/fields/Age_maximum__c.field-meta.xml
<CustomField>
    <fullName>Age_maximum__c</fullName>
    <label>Age maximum</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>