force-app/main/default/objects/Product2/fields/CPF_Mon_Compte_Formation__c.field-meta.xml
<CustomField>
    <fullName>CPF_Mon_Compte_Formation__c</fullName>
    <description>Détermine si un produit est éligible au CPF (Compte Personnel de Formation)</description>
    <label>CPF_Mon Compte Formation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>éligible à Mon Compte Formation</fullName>
            </value>
            <value>
                <fullName>non éligible à Mon Compte Formation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>