force-app/main/default/objects/Product2/fields/Domaine__c.field-meta.xml
<CustomField>
    <fullName>Domaine__c</fullName>
    <label>Domaine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MRH</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>FPP</fullName>
            </value>
            <value>
                <fullName>DCRC</fullName>
            </value>
            <value>
                <fullName>MKT</fullName>
            </value>
            <value>
                <fullName>HA</fullName>
            </value>
            <value>
                <fullName>LDP</fullName>
            </value>
            <value>
                <fullName>I&amp;E</fullName>
            </value>
            <value>
                <fullName>TRANSVERSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>