force-app/main/default/objects/Product2/fields/Domaine_tudes__c.field-meta.xml
<CustomField>
    <fullName>Domaine_tudes__c</fullName>
    <label>Domaine études</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gestion</fullName>
            </value>
            <value>
                <fullName>Droit</fullName>
            </value>
            <value>
                <fullName>Economie</fullName>
            </value>
            <value>
                <fullName>Sciences (mathématiques, physique,...)</fullName>
            </value>
            <value>
                <fullName>Sciences humaines (lettres,...)</fullName>
            </value>
            <value>
                <fullName>Ingénieur</fullName>
            </value>
            <value>
                <fullName>Santé (pharmacie, vétérinaire,…)</fullName>
            </value>
            <value>
                <fullName>Bac ES (économique et sociale)</fullName>
            </value>
            <value>
                <fullName>Bac S (scientifique)</fullName>
            </value>
            <value>
                <fullName>Bac L (littéraire)</fullName>
            </value>
            <value>
                <fullName>Bac STMG</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>