force-app/main/default/objects/Product2/fields/Domaine_tudes_formule__c.field-meta.xml
<CustomField>
    <fullName>Domaine_tudes_formule__c</fullName>
    <formula>IF(INCLUDES( Domaine_tudes__c ,&quot;Gestion&quot;),&quot;Gestion &quot;,&quot;&quot;) &amp;
IF(INCLUDES( Domaine_tudes__c ,&quot;Sciences (mathématiques, physique,...)&quot;),&quot;Sciences (mathématiques, physique,...) &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Sciences humaines (lettres,...)&quot;),&quot;Sciences humaines (lettres,...) &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Ingénieur&quot;),&quot;Ingénieur &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Santé (pharmacie, vétérinaire,…)&quot;),&quot;Santé (pharmacie, vétérinaire,…) &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Autre&quot;),&quot;Autre &quot;,&quot;&quot;) &amp;
IF(INCLUDES( Domaine_tudes__c ,&quot;Gestion&quot;),&quot;Gestion &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Droit&quot;),&quot;Droit &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Bac STMG&quot;),&quot;Bac STMG &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Bac L (littéraire)&quot;),&quot;Bac L (littéraire) &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Bac S (scientifique)&quot;),&quot;Bac S (scientifique) &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Bac ES (économique et sociale)&quot;),&quot;Bac ES (économique et sociale) &quot;,&quot;&quot;) &amp;
IF(INCLUDES( Domaine_tudes__c ,&quot;Economie&quot;),&quot;Economie &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domaine études formule</label>
    <type>Text</type>
</CustomField>