force-app/main/default/objects/Product2/fields/Famille__c.field-meta.xml
<CustomField>
    <fullName>Famille__c</fullName>
    <label>Famille / Domaine</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accélérateur</fullName>
            </value>
            <value>
                <fullName>Accompagnement Carrières</fullName>
            </value>
            <value>
                <fullName>Accompagnement entreprises = RDV</fullName>
            </value>
            <value>
                <fullName>Accompagnement pédagogique</fullName>
            </value>
            <value>
                <fullName>Accord Cadre Formation Continue =</fullName>
            </value>
            <value>
                <fullName>Achats</fullName>
            </value>
            <value>
                <fullName>Alternance</fullName>
            </value>
            <value>
                <fullName>Annuaires</fullName>
            </value>
            <value>
                <fullName>Atelier</fullName>
            </value>
            <value>
                <fullName>Au choix</fullName>
            </value>
            <value>
                <fullName>Business Weeks</fullName>
            </value>
            <value>
                <fullName>Careers Days</fullName>
            </value>
            <value>
                <fullName>Célébration</fullName>
            </value>
            <value>
                <fullName>Chaires Conjointes</fullName>
            </value>
            <value>
                <fullName>Chaires d’enseignement et de recherche (&gt;1Me sur 4/5 ans)</fullName>
            </value>
            <value>
                <fullName>Colloques</fullName>
            </value>
            <value>
                <fullName>Conférence</fullName>
            </value>
            <value>
                <fullName>Conférences non payantes (notoriété)</fullName>
            </value>
            <value>
                <fullName>Conférences non payantes (pédagogiques)</fullName>
            </value>
            <value>
                <fullName>Conférences non payantes (type gd public)</fullName>
            </value>
            <value>
                <fullName>Conférences non payantes (type scientifique)</fullName>
            </value>
            <value>
                <fullName>Conférences payantes (par l&apos;auditeur, participant)</fullName>
            </value>
            <value>
                <fullName>Conférences payantes (par l&apos;intervenant-casHEC)</fullName>
            </value>
            <value>
                <fullName>Confier 1 projet à 1 étudiant</fullName>
            </value>
            <value>
                <fullName>Conseil institutionnel =</fullName>
            </value>
            <value>
                <fullName>Corporate Discovery Session</fullName>
            </value>
            <value>
                <fullName>CVThèque</fullName>
            </value>
            <value>
                <fullName>Développement Commercial et Relation client</fullName>
            </value>
            <value>
                <fullName>Développement personnel</fullName>
            </value>
            <value>
                <fullName>Dons Fondation =&gt; individu ou entreprise  (idem EMLYON)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>