force-app/main/default/objects/Product2/fields/ID_suiveur__c.field-meta.xml
<CustomField>
    <fullName>ID_suiveur__c</fullName>
    <formula>Suiveur__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID suiveur</label>
    <type>Text</type>
</CustomField>