force-app/main/default/objects/Product2/fields/Libelle_Produit__c.field-meta.xml
<CustomField>
    <fullName>Libelle_Produit__c</fullName>
    <formula>ProductCode + &quot; : &quot; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Libellé Produit</label>
    <type>Text</type>
</CustomField>