force-app/main/default/objects/Product2/fields/Localisation_pr_ciser_dans_l_opp__c.field-meta.xml
<CustomField>
    <fullName>Localisation_pr_ciser_dans_l_opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Localisation à préciser dans l&apos;opp</label>
    <type>Checkbox</type>
</CustomField>