force-app/main/default/objects/Product2/fields/Ne_pas_synchroniser_avec_Kreactive__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_synchroniser_avec_Kreactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne pas synchroniser avec Kreactive</label>
    <type>Checkbox</type>
</CustomField>