force-app/main/default/objects/Product2/fields/Niveau_d_exp_rience__c.field-meta.xml
<CustomField>
    <fullName>Niveau_d_exp_rience__c</fullName>
    <label>Niveau d&apos;expérience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-2 ans</fullName>
            </value>
            <value>
                <fullName>3-5 ans</fullName>
            </value>
            <value>
                <fullName>6-10 ans</fullName>
            </value>
            <value>
                <fullName>+ de 10 ans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>