force-app/main/default/objects/Product2/fields/Niveau_xp_pro_num_ro__c.field-meta.xml
<CustomField>
    <fullName>Niveau_xp_pro_num_ro__c</fullName>
    <formula>CASE(TEXT(  Niveau_d_exp_rience__c ), 
&apos;0-2 ans&apos;,10, 
&apos;3-5 ans&apos;,20, 
&apos;6-10 ans&apos;,30, 
&apos;+ de 10 ans&apos;,40, 
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau xp pro numéro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>