force-app/main/default/objects/Product2/fields/Nombre_d_heures__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_heures__c</fullName>
    <label>Nombre d&apos;heures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>