force-app/main/default/objects/Product2/fields/Objectif__c.field-meta.xml
<CustomField>
    <fullName>Objectif__c</fullName>
    <label>Objectif</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PR-LO10</fullName>
            </value>
            <value>
                <fullName>PR-LO20</fullName>
            </value>
            <value>
                <fullName>PR-LO30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>