force-app/main/default/objects/Product2/fields/Produit_de_candidature__c.field-meta.xml
<CustomField>
    <fullName>Produit_de_candidature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sur la partie EXECUTIVE nous avons besoin d&apos;ajouter un champ lookup qui nous permette d&apos;indiquer, pour un produit donné quel est le produit de candidature (frais de scolarité associé)</description>
    <label>Produit de candidature</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produits</relationshipLabel>
    <relationshipName>Produits</relationshipName>
    <type>Lookup</type>
</CustomField>