force-app/main/default/objects/Product2/fields/Produit_Pack__c.field-meta.xml
<CustomField>
    <fullName>Produit_Pack__c</fullName>
    <formula>RecordType.DeveloperName = &quot;Pack&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produit Pack</label>
    <type>Checkbox</type>
</CustomField>