force-app/main/default/objects/Product2/fields/produit_unique__c.field-meta.xml
<CustomField>
    <fullName>produit_unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Ce champ est rempli par WF, il permet d&apos;éviter tout doublon dans le code produit</description>
    <externalId>true</externalId>
    <label>produit unique</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>