force-app/main/default/objects/Product2/fields/Suiveur__c.field-meta.xml
<CustomField>
    <fullName>Suiveur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suiveur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Produits</relationshipName>
    <type>Lookup</type>
</CustomField>