force-app/main/default/objects/Product2/fields/Type_enregistrement_produit__c.field-meta.xml
<CustomField>
    <fullName>Type_enregistrement_produit__c</fullName>
    <description>Champs formule créé pour récupérer le type d&apos;enregistrement du produit et pour l&apos;afficher dans le type de rapport &quot;Catalogues de prix avec des produits&quot;.</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;enregistrement produit</label>
    <type>Text</type>
</CustomField>