force-app/main/default/objects/Product2/fields/X18caracter__c.field-meta.xml
<CustomField>
    <fullName>X18caracter__c</fullName>
    <description>Id Salesforce sur 18 caractères</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Id Salesforce sur 18 caractères</inlineHelpText>
    <label>18caracter</label>
    <type>Text</type>
</CustomField>