force-app/main/default/objects/Product2/recordTypes/Dons.recordType-meta.xml
<RecordType>
    <fullName>Dons</fullName>
    <active>true</active>
    <description>Pour la collecte des fonds ( Dons &amp; Mécenat)</description>
    <label>Dons</label>
</RecordType>