force-app/main/default/objects/Product2/recordTypes/Module.recordType-meta.xml
<RecordType>
    <fullName>Module</fullName>
    <active>true</active>
    <label>Module</label>
</RecordType>