force-app/main/default/objects/Product2/recordTypes/Pack.recordType-meta.xml
<RecordType>
    <fullName>Pack</fullName>
    <active>true</active>
    <label>Pack</label>
</RecordType>