force-app/main/default/objects/Product2/recordTypes/Prestation.recordType-meta.xml
<RecordType>
    <fullName>Prestation</fullName>
    <active>true</active>
    <label>Prestation</label>
</RecordType>