force-app/main/default/objects/Product2/recordTypes/Programme.recordType-meta.xml
<RecordType>
    <fullName>Programme</fullName>
    <active>true</active>
    <label>Programme</label>
</RecordType>