force-app/main/default/objects/Product2/recordTypes/Relations_Employeur.recordType-meta.xml
<RecordType>
    <fullName>Relations_Employeur</fullName>
    <active>true</active>
    <label>Relations Employeur</label>
</RecordType>