force-app/main/default/objects/Product2/recordTypes/Selection.recordType-meta.xml
<RecordType>
    <fullName>Selection</fullName>
    <active>true</active>
    <description>Produit de sélection</description>
    <label>Selection</label>
</RecordType>