force-app/main/default/objects/Product2/recordTypes/Taxe.recordType-meta.xml
<RecordType>
    <fullName>Taxe</fullName>
    <active>true</active>
    <label>Taxe</label>
</RecordType>