force-app/main/default/objects/Product2/validationRules/Champs_Obligatoires.validationRule-meta.xml
<ValidationRule>
    <fullName>Champs_Obligatoires</fullName>
    <active>true</active>
    <description>Rend certains champs obligatoires à la création/modification d&apos;un produit.</description>
    <errorConditionFormula>(ISBLANK(ProductCode)   ||    
ISPICKVAL(Famille__c, &quot;&quot;) ||  
ISPICKVAL( Format__c , &quot;&quot;)  || 
ISBLANK( Nombre_d_heures__c )  ||  
ISBLANK( Nombre_de_jours__c )  ||  
ISBLANK( Suiveur__c )   || 
ISBLANK( TEXT( CPF_Mon_Compte_Formation__c ) ) )
&amp;&amp;   
CONTAINS( TEXT( Family ) , &quot;OFFRES EXEC DEV&quot;)</errorConditionFormula>
    <errorMessage>Les champs CPF, Code du produit, Famille, Format, Gamme, Nombre d&apos;heures, Nombre de jours et Suiveur sont obligatoires</errorMessage>
</ValidationRule>