force-app/main/default/objects/Product2/listViews/Catalogue_Produits_RE.listView-meta.xml
<ListView>
    <fullName>Catalogue_Produits_RE</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Libelle_Produit__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Famille__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Relations_Employeur</value>
    </filters>
    <label>Catalogue Produits _ RE</label>
</ListView>