force-app/main/default/objects/Product2/listViews/EXEC_Produits_de_SELECTION.listView-meta.xml
<ListView>
    <fullName>EXEC_Produits_de_SELECTION</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <label>EXEC _ Produits de SELECTION</label>
</ListView>