force-app/main/default/objects/Product2/listViews/EXECUTIVE_Certificats.listView-meta.xml
<ListView>
    <fullName>EXECUTIVE_Certificats</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Famille__c</columns>
    <columns>Format__c</columns>
    <columns>Nombre_d_heures__c</columns>
    <columns>Nombre_de_jours__c</columns>
    <columns>Suiveur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>OFFRES EXEC DEV Programmes Certifiants</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>EXECUTIVE - Certificats</label>
    <sharedTo>
        <group>EML</group>
    </sharedTo>
</ListView>