force-app/main/default/objects/Product2/listViews/INDIA_programs.listView-meta.xml
<ListView>
    <fullName>INDIA_programs</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Format__c</columns>
    <columns>Suiveur__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>equals</operation>
        <value>MNDS,SPMI</value>
    </filters>
    <label>INDIA_programs</label>
</ListView>