force-app/main/default/objects/Product2/listViews/Liste_produits_FI.listView-meta.xml
<ListView>
    <fullName>Liste_produits_FI</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Suiveur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Famille__c</field>
        <operation>equals</operation>
        <value>Programme « Grande Ecole »,Programme Bachelor,Programmes « Mastères spécialisés »,Programmes « Masters  en Anglais»</value>
    </filters>
    <label>FI_Liste produits FI</label>
</ListView>