force-app/main/default/objects/Product2/listViews/OFFRESEXECDEVProgrammeslong.listView-meta.xml
<ListView>
    <fullName>OFFRESEXECDEVProgrammeslong</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Ne_pas_afficher_sur_le_site_EML__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Format__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Suiveur__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Pack_la_carte__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>OFFRES EXEC DEV Programmes courts,OFFRES EXEC DEV Programmes Certifiants</value>
    </filters>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Module,Product2.Pack,Product2.Programme</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Suiveur__c</field>
        <operation>notEqual</operation>
        <value>Alexandra PHILIPPE</value>
    </filters>
    <filters>
        <field>Suiveur__c</field>
        <operation>notEqual</operation>
        <value>Josiane GACHON</value>
    </filters>
    <filters>
        <field>Suiveur__c</field>
        <operation>notEqual</operation>
        <value>Christine NEVEUX</value>
    </filters>
    <filters>
        <field>Suiveur__c</field>
        <operation>notEqual</operation>
        <value>Astrid LOI</value>
    </filters>
    <label>Produits OFFRES EXEC DEV Formation court</label>
    <language>fr</language>
</ListView>