force-app/main/default/objects/Product2/listViews/Produits_apprentissage.listView-meta.xml
<ListView>
    <fullName>Produits_apprentissage</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Programme</value>
    </filters>
    <filters>
        <field>Famille__c</field>
        <operation>equals</operation>
        <value>Programme apprentissage</value>
    </filters>
    <label>CFA_Produits apprentissage</label>
</ListView>