force-app/main/default/objects/Product2/listViews/Produits_BBA.listView-meta.xml
<ListView>
    <fullName>Produits_BBA</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Famille__c</columns>
    <columns>Suiveur__c</columns>
    <columns>ID_suiveur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>PROGRAMMES BACHELOR</value>
    </filters>
    <label>FI_Produits BBA</label>
</ListView>