force-app/main/default/objects/Product2/listViews/Produits_Casa1.listView-meta.xml
<ListView>
    <fullName>Produits_Casa1</fullName>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Famille__c</columns>
    <columns>Suiveur__c</columns>
    <columns>ID_suiveur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>CA_</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Produits Casa</label>
</ListView>