force-app/main/default/objects/Product2/listViews/Produits_Chine.listView-meta.xml
<ListView>
    <fullName>Produits_Chine</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Famille__c</columns>
    <columns>Suiveur__c</columns>
    <columns>ID_suiveur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>CA_</value>
    </filters>
    <label>Produits Chine</label>
    <language>fr</language>
</ListView>