force-app/main/default/objects/Product2/listViews/Produits_Formation_initiale.listView-meta.xml
<ListView>
    <fullName>Produits_Formation_initiale</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Famille__c</columns>
    <columns>Suiveur__c</columns>
    <columns>ID_suiveur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Famille__c</field>
        <operation>equals</operation>
        <value>Programmes « Masters  en Anglais»</value>
    </filters>
    <label>FI_Produits Masters en Anglais</label>
</ListView>