force-app/main/default/objects/Product2/listViews/Produits_incoming_student_mobility.listView-meta.xml
<ListView>
    <fullName>Produits_incoming_student_mobility</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Famille__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_enregistrement_produit__c</field>
        <operation>equals</operation>
        <value>Programme</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>OFFRE INCOMING STUDENT MOBILITY</value>
    </filters>
    <label>INT_Produits incoming student mobility</label>
</ListView>