force-app/main/default/objects/Product2/listViews/Produits_La_Toile.listView-meta.xml
<ListView>
    <fullName>Produits_La_Toile</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>OFFRE La Toile _ Ecole Qualification Numérique</value>
    </filters>
    <label>Produits La Toile</label>
</ListView>